# asio_dns_resolver

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
all/: CMakeLists.txt
cmake/: project.cmake
include/: common.hpp  dns.hpp  dns_answer.hpp  dns_header.hpp  dns_query.hpp  dns_question.hpp  dns_record_e.hpp  dns_response.hpp  mx_rdata.hpp  qclass.hpp  qtype.hpp  resolver.hpp  soa_rdata.hpp  starter.hpp
scripts/: build-project.sh  configure-buildtree.sh  run-ab-benchmark.sh
source/: common.cpp  dns.cpp  dns_answer.cpp  dns_header.cpp  dns_query.cpp  dns_question.cpp  dns_record_e.cpp  dns_response.cpp  mx_rdata.cpp  qtype.cpp  resolver.cpp  soa_rdata.cpp  starter.cpp
standalone/: CMakeLists.txt
standalone/source/: example.cpp  main.cpp
test/: CMakeLists.txt
test/source/: common.cpp  dns.cpp  dns_answer.cpp  dns_response.cpp  resolver.cpp  test.cpp
